# sapf-wasm

./: .gitignore  .gitmodules  Makefile  README.md  README_VSCODE.md  clang.ini  default.nix  flake.nix  meson.build  meson.options  sapf-examples.txt  sapf-prelude.txt
.github/scripts/: install-debian-deps.sh  install-macos-cross-platform-deps.sh  install-macos-native-deps.sh
.github/workflows/: build.yml  nix.yml
include/: AsyncAudioFileWriter.hpp  AudioToolboxSoundFile.hpp  Buffers.hpp  MathFuns.hpp  OscilUGens.hpp  Play.hpp  PortableBuffers.hpp  SndfileSoundFile.hpp  SndfileSoundFile.hpp_nope  SoundFiles.hpp  StreamOps.hpp  Testability.hpp  VM.hpp  ZArr.hpp  ringbuffer.hpp
src/: AsyncAudioFileWriter.cpp  AudioToolboxBuffers.cpp  AudioToolboxSoundFile.cpp  Buffers.cpp  CoreOps.cpp  DelayUGens.cpp  FilterUGens.cpp  MathOps.cpp  Object.cpp  OscilUGens.cpp  Play.cpp  RandomOps.cpp  SndfileSoundFile.cpp  SoundFiles.cpp  StreamOps.cpp  UGen.cpp  VM.cpp  ZArr.cpp  main.cpp
subprojects/: doctest.wrap
test/: doctest.cpp  test_AsyncAudioFileWriter.cpp  test_MathOps.cpp  test_OscilUgens.cpp  test_SndfileSoundFile.cpp  test_StreamOps.cpp
test/helpers/: ArrHelpers.hpp
