option('accelerate', type : 'boolean', value : false)
option('apple_lock', type : 'boolean', value : false)
option('asan', type: 'boolean', value: false, description: 'Enable Address Sanitizer')
option('ubsan', type: 'boolean', value: false, description: 'Enable Undefined Behavior Sanitizer')
option('tsan', type: 'boolean', value: false, description: 'Enable Thread Sanitizer')
option('msan', type: 'boolean', value: false, description: 'Enable Memory Sanitizer')
option('lsan', type: 'boolean', value: false, description: 'Enable Leak Sanitizer')
option('audiotoolbox', type : 'boolean', value : false)
option('carbon', type : 'boolean', value : false)
option('cocoa', type : 'boolean', value : false)
option('corefoundation', type : 'boolean', value : false)
option('coremidi', type : 'boolean', value : false)
option('dispatch', type : 'boolean', value : false)
option('mach_time', type : 'boolean', value : false)
option('manta', type : 'boolean', value : false)
